--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="mt-4">
             <span class="badge bg-warning me-2">🐾 宠物友好民宿</span>
             <span class="badge bg-danger me-2">🔍 沉浸式剧本杀</span>
-            <span class="badge bg-primary">🌊 美丽海景随心看</span>
+            <span class="badge bg-primary">🌊 众多景点随心看</span>
         </div>
     </div>
 </header>
@@ -119,13 +119,13 @@
                     </div>
                 </div>
             </div>
-            <!-- 海豚湾亲子房 -->
+            <!-- 海豚湾特色亲子房 -->
             <div class="col-md-4">
                 <div class="card h-100 ocean-theme">
                     <img src="images/room3.jpg" class="card-img-top" alt="亲子房">
                     <div class="card-body">
                         <div class="d-flex justify-content-between">
-                            <h5>海豚湾亲子房</h5>
+                            <h5>海豚湾特色亲子房</h5>
                             <span class="badge bg-warning">亲子房</span>
                         </div>
                         <p>🛏 1.8米大床&&1.5米儿童床 | 🛁 独立浴缸 | 75㎡</p>
@@ -175,7 +175,7 @@
         </div>
         <div class="col-md-3">
             <img src="images/sea-icon.png" class="feature-icon" alt="海景">
-            <h5>美丽海景</h5>
+            <h5>欧式建筑+美丽海景</h5>
             <p>180°无敌海景 | 私人阳台 | 日出日落尽收眼底</p>
         </div>
         <!-- 更多服务... -->
@@ -199,7 +199,7 @@
             <div class="col-md-4">
             <div class="bg-white text-dark p-3 rounded mb-3">
                 <h5>古堡幽影</h5>
-                <p>时长：4小时 | 人数：5-7人</p>
+                <p>时长：12小时 | 人数：5-7人</p>
                 <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#scriptModal2">查看剧本</button>
             </div>
             </div>
@@ -207,7 +207,7 @@
             <div class="col-md-4">
             <div class="bg-white text-dark p-3 rounded mb-3">
                 <h5>深海谜踪</h5>
-                <p>时长：5小时 | 人数：4-6人</p>
+                <p>时长：24小时 | 人数：4-6人</p>
                 <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#scriptModal3">查看剧本</button>
             </div>
             </div>
@@ -294,6 +294,9 @@
             <div class="col-md-3">
                 <img src="images/lobby.jpg" class="img-fluid rounded" alt="欧式大堂">
             </div>
+            <div class="col-md-3">
+                <img src="images/house.jpg" class="img-fluid rounded" alt="房间内置">
+            </div>
             <!-- 更多图片... -->
         </div>
     </section>
@@ -305,17 +308,17 @@
             <div class="col-md-4">
                 <img src="images/xiaohongshu-icon.png" class="feature-icon" alt="小红书">
                 <h5>小红书</h5>
-                <p>@蔚蓝城堡民宿</p>
+                <p>@xxxx民宿</p>
             </div>
             <div class="col-md-4">
                 <img src="images/weibo-icon.png" class="feature-icon" alt="微博">
                 <h5>微博</h5>
-                <p>@蔚蓝城堡官方</p>
+                <p>@xxxx官方</p>
             </div>
             <div class="col-md-4">
                 <img src="images/douyin-icon.png" class="feature-icon" alt="抖音">
                 <h5>抖音</h5>
-                <p>@蔚蓝城堡海景民宿</p>
+                <p>@xxxx民宿</p>
             </div>
         </div>
     </section>
