--- a/index.html
+++ b/index.html
@@ -306,17 +306,17 @@
         <h2 class="text-center mb-5">📱 联系我们</h2>
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="images/xiaohongshu-icon.png" class="feature-icon" alt="小红书">
+                <img src="images/xiaohongshu.png" class="feature-icon" alt="小红书">
                 <h5>小红书</h5>
                 <p>@xxxx民宿</p>
             </div>
             <div class="col-md-4">
-                <img src="images/weibo-icon.png" class="feature-icon" alt="微博">
+                <img src="images/weibo.png" class="feature-icon" alt="微博">
                 <h5>微博</h5>
                 <p>@xxxx官方</p>
             </div>
             <div class="col-md-4">
-                <img src="images/douyin-icon.png" class="feature-icon" alt="抖音">
+                <img src="images/douyin.png" class="feature-icon" alt="抖音">
                 <h5>抖音</h5>
                 <p>@xxxx民宿</p>
             </div>
